--- a/Projetos/Front-END/JavaScript/POKEDEX/assets/css/pokedex.css
+++ b/Projetos/Front-END/JavaScript/POKEDEX/assets/css/pokedex.css
@@ -10,7 +10,7 @@
   background-color: #a6a877;
 }
 .grass {
-  background-color: #77c850;
+  background-color: #49d0b0;
 }
 .fire {
   background-color: #ee7f30;
